crates/vescpkg-rs/tests/ui/thread_handles_are_linear.rs
fn duplicate_handle(handle: vescpkg_rs::ThreadHandle) {
    let _first = handle;
    let _second = handle;
}

fn duplicate_pair(pair: vescpkg_rs::ThreadPair) {
    let _first = pair;
    let _second = pair;
}

fn main() {}
